cha-pre-live-flux2/cha-eks-5b/namespaces/sberdg-integration/namespace-sberdg-integration.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: sberdg-integration
  name: sberdg-integration
